Issue #101: Adding filters for caption and alignment for editor image handling.

--- a/core/modules/system/css/system.theme.css
+++ b/core/modules/system/css/system.theme.css
@@ -539,3 +539,31 @@ img.align-right {
   margin-left: 2em;
   margin-bottom: 1em;
 }
+
+/**
+ * Figure and Figure Captions.
+ *
+ * Responsive figure elements, based on http://stackoverflow.com/a/13363408.
+ */
+.caption {
+  display: table;
+  margin: 0 12px 10px;
+  border: 1px solid #ccc;
+}
+.caption.align-center {
+  margin-left: auto;
+  margin-right: auto;
+}
+.caption > * {
+  display: block;
+  max-width: 100%;
+}
+.caption > figcaption {
+  display: table-caption;
+  caption-side: bottom;
+  max-width: none;
+  padding: 3px 6px;
+  border: 1px solid #ccc;
+  border-top: none;
+  background-color: #eee;
+}
